# c_weather_app

./: .bazelrc  BUILD  CMakeLists.txt  WORKSPACE  X11.BUILD  a.out  graph.c  gui.c  layout.h  layout.txt  macros.c  main.c  main_demo.c  maybe.c  term_drawing.h  tests.c  weather_lib.c  weather_lib.h
main/: BUILD  graph.c  graph.h  gui.c  layout.c  layout.h  test_graph.c  test_layout.c
test/: test_str_lib.c  test_weather_lib.c
utility/: BUILD  assert_macros.h  magic.h  str.c  str.h  str_lib.c  str_lib.h  test_str_lib.c  vec.c  vec.h
